<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">BrainWest</string>
    <string name="onborading_title_one">Selamat Datang di Dunia Teknologi yang Dapat Diakses</string>
    <string name="onborading_title_two">Deteksi Dini untuk Otak yang Lebih Sehat dan Berkinerja Optimal</string>
    <string name="onborading_title_three">Edukasi &amp; Dukungan untuk Perjalanan Kesehatan Otak Anda</string>
    <string name="onborading_subtitle_one">Aplikasi kesehatan otak yang membantu masyarakat menjaga dan meningkatkan kesehatan otak dengan fitur deteksi dini, konsultasi, komunitas, edukasi, serta dukungan berbasis teknologi AI. Mari wujudkan generasi yang lebih sehat, cerdas, dan peduli terhadap kesehatan otak!</string>
    <string name="onborading_subtitle_two">Dengan teknologi AI dan analisis cerdas, kami membantu Anda memeriksa kondisi kesehatan otak secara cepat dan akurat.  Cukup jawab pertanyaan atau gunakan fitur analisis otomatis, dan dapatkan panduan pencegahan yang tepat sebelum masalah muncul.</string>
    <string name="onborading_subtitle_three">Akses materi edukasi terpercaya, tips gaya hidup sehat, dan komunitas yang peduli. Bersama, kita wujudkan generasi yang lebih sadar, cerdas, dan siap menjaga kesehatan otak seumur hidup.</string>
    <string name="login_title">Silahkan Masuk ke Akun Anda</string>
    <string name="login_sub_title">Masukkan nama user dan kata sandi Anda untuk masuk</string>
    <string name="username">Nama User</string>
    <string name="hint_username">Masukan nama user...</string>
    <string name="password">Kata Sandi</string>
    <string name="hint_password">Masukan kata sandi...</string>
    <string name="forgot_password"><u>Lupa Kata Sandi?</u></string>
    <string name="login">Masuk</string>
    <string name="login_underline"><u>Masuk</u></string>
    <string name="google">Lanjutkan dengan Google</string>
    <string name="facebook">Lanjutkan dengan Facebook</string>
    <string name="or">Atau</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="register">Daftar</string>
    <string name="register_title">Daftar</string>
    <string name="register_underline"><u>Daftar</u></string>
    <string name="register_sub_title">Buat akun untuk melanjutkan!</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="hint_fullname">Masukan nama lengkap...</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="hint_birth_date">Masukan tanggal lahir...</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="next"><u>Lewati</u></string>
    <string name="home">Beranda</string>
    <string name="education">Edukasi</string>
    <string name="community">Komunitas</string>
    <string name="profile">Profile</string>
    <string name="hint_home">Cari sesuatu...</string>
    <string name="home_shortcut_one">Test Kesehatan Otak Anda Sekarang!</string>
    <string name="test_now">Test Sekarang!</string>
    <string name="our_service">Layanan Kami</string>
    <string name="detection_tumor">Deteksi Tumor</string>
    <string name="health_test">Tes Kesehatan</string>
    <string name="consultation">Konsultasi</string>
    <string name="smart_assistant">Asisten Pintar</string>
    <string name="donation">Donasi</string>
    <string name="event">Event Webinar</string>
    <string name="rehabilitation">Tele Rehabilitasi</string>
    <string name="e_commerce">E-Commerce</string>
    <string name="need_friend_to_talk">Butuh Teman Untuk Ngobrol?</string>
    <string name="chat_ai_now">Chat Asisten Kesehatan Sekarang!</string>
    <string name="try_ai">Coba</string>
    <string name="drug_shopping">Perdagangan Obat</string>
    <string name="see_all"><u>Lihat Semua</u></string>
    <string name="all_field_must_be_filled">Semua input wajib di isi!</string>
    <string name="hint_search_article">Cari artikel...</string>
    <string name="popular_video">Video Populer</string>
    <string name="most_view">Paling banyak dilihat</string>
    <string name="new_article">Artikel Terbaru</string>
    <string name="just_upload">Baru saja diupload</string>
    <string name="edu_slider_one">Ragam Perilaku Gejala ”Brain Rot” dan Cara Menjaga Kesehatan Otak</string>
    <string name="desc"> Hari Otak Sedunia atau World Brain Day kembali diperingati pada 22 Juli 2025 oleh masyarakat global. Momen tahunan ini menjadi ajakan bersama untuk lebih peduli terhadap kesehatan otak dan pentingnya peran otak dalam seluruh aspek kehidupan manusia. Setiap tahunnya, peringatan ini diisi dengan kampanye bertema khusus yang relevan dengan isu kesehatan neurologis. Tahun ini, penyelenggara mengangkat tema baru sekaligus melanjutkan misi edukatif dan advokatif yang telah berlangsung selama lebih dari satu dekade. Dilansir World Federation of Neurology, tema Hari Otak Sedunia tahun ini adalah &quot;Brain Health for All Ages&quot; atau &quot;Kesehatan Otak untuk Semua Usia&quot;. Tema ini menyoroti bahwa menjaga kesehatan otak merupakan proses berkelanjutan yang dimulai sejak usia dini hingga lanjut usia.</string>
    <string name="detail_event">Detail Webinar</string>
    <string name="buy_ticket">Beli Tiket Sekarang</string>
    <string name="desc_event_webinar">Deskripsi Event Webinar</string>
    <string name="transaction">Pembayaran</string>
    <string name="my_ticket">Tiket Saya</string>
    <string name="print">Cetak Tiket</string>
    <string name="chatbot_asistant">Asisten Kesehatan Otak Pintar</string>
    <string name="can_i_help_you_today">Apa yang bisa saya bantu hari ini!</string>
    <string name="start">Mulai</string>
    <string name="health_asistant">Asisten Kesehatan </string>\
    <string name="hint_write_chat">Ketik pesan...</string>
    <string name="transaction_menu">Transaksi</string>
    <string name="hint_donation">Cari donasi...</string>
    <string name="submit_your_donation">Ajukan Pengajuan Penerima Donasi Sekarang!</string>
    <string name="submit_now">Ajukan Sekarang!</string>
    <string name="urgent_fundraising">Penggalangan Dana Mendesak</string>
    <string name="collected">Terkumpul</string>
    <string name="rest_day">Sisa Hari</string>
    <string name="donation_detail">Detail Donasi</string>
    <string name="current_donate">Donasi Terkumpul</string>
    <string name="target_donate">Target Donasi</string>
    <string name="story_donation">Cerita Penggalangan Donasi</string>
    <string name="donate_now">Donasi Sekarang</string>
    <string name="input_nominal">Masukan Nominal</string>
    <string name="choose_nominal_donation">Pilih Nominal Donasi</string>
    <string name="or_input_manual">Atau Masukan Nominal Manual</string>
    <string name="hint_nominal">Masukan nominal...</string>
    <string name="search_doctor">Cari dokter...</string>
    <string name="chat_in">Pesan Masuk</string>
    <string name="upload_your_scan">Silakan unggah hasil scan otak anda untuk analisis.</string>
    <string name="scan_brain">Scan Tumor Otak</string>
    <string name="upload_x_ray">Unggah CT/MRI otak Anda</string>
    <string name="upload_text">Temukan potensi risiko tumor otak lebih awal dengan pemindaian berbasis AI. Proses cepat, aman, dan akurat bersama teknologi canggih dan tenaga medis terpercaya.</string>
    <string name="upload_media">Unggah Media</string>
    <string name="upload_file">Unggah file Anda atau</string>
    <string name="browse">telusuri</string>
    <string name="file_size">Ukuran file yang diizinkan maksimal 10 MB</string>
    <string name="address_media">Alamat Media</string>
    <string name="detection_now">Deteksi Sekarang</string>
    <string name="result_analytics_brain">Hasil Deteksi CT/MRI otak Anda</string>
    <string name="warning_important">Peringatan Penting</string>
    <string name="result_from_analytics_ai">Hasil ini merupakan analisis AI dan tidak 100% akurat. Konsultasikan selalu dengan tenaga medis profesional untuk diagnosis yang tepat.</string>
    <string name="ai_accuracy_level">Tingkat Akurasi AI</string>
    <string name="disease_diagnosis">Diagnosa Penyakit</string>
    <string name="clinical_risks">Risiko Klinis</string>
    <string name="disease_explanation">Penjelasan Penyakit</string>
    <string name="possible_conditions">Kemungkinan Kondisi</string>
    <string name="recomendation_from_us">Rekomendasi Dari</string>
    <string name="need_more_explenation">Butuh penjelasan lebih lanjut?</string>
    <string name="consultation_the_result_now">Konsultasikan hasil Anda sekarang!</string>
    <string name="back">Kembali</string>
    <string name="explanation_glioma">Glioma adalah tumor otak yang berasal dari sel glial yang mendukung neuron; dapat bersifat jinak atau ganas dan menyebabkan sakit kepala, kejang, serta gangguan fungsi otak.</string>
    <string name="explanation_meningioma">Meningioma adalah tumor yang tumbuh pada selaput pelindung otak dan sumsum tulang belakang; biasanya jinak namun dapat menekan jaringan otak sehingga menimbulkan gejala neurologis.</string>
    <string name="explanation_no_tumor">Tidak ditemukan tanda adanya tumor otak; kondisi otak tampak normal dan tidak menunjukkan kelainan struktural yang signifikan.</string>
    <string name="explanation_pituitary">Pituitary tumor adalah tumor yang tumbuh pada kelenjar pituitari di dasar otak dan dapat memengaruhi hormon tubuh, menyebabkan gangguan penglihatan, kelelahan, atau perubahan berat badan.</string>
    <string name="default_explanation">Hasil prediksi tidak dapat diidentifikasi. Silakan konsultasikan dengan tenaga medis profesional.</string>
    <string name="your_age">Usia Kamu</string>
    <string name="hint_age">Ketik usia...</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="man">Laki-Laki</string>
    <string name="woman">Perempuan</string>
    <string name="choose_status_medice">Status Medis Saat Ini</string>
    <string name="start_rehabilitation">Mulai Latihan Rehabilitasi</string>
    <string name="rehabilitation_program">Program Pemulihan</string>
    <string name="save">Simpan</string>
    <string name="hint_transaction">Cari transaksi...</string>
    <string name="kidness_donation">Donasi Kebaikan</string>
    <string name="community_header">Bergabunglah dengan komunitas yang mendukung dan memberdayakan!</string>
    <string name="hint_community">Cari komunitas...</string>
    <string name="join">Gabung</string>
    <string name="community_message">Pesan Komunitas</string>
    <string name="list_medicine">List Obat</string>
    <string name="hint_medicine">Cari obat...</string>
    <string name="pack">/pack</string>
    <string name="description">Deskripsi</string>
    <string name="add_to_cart">Masukan Keranjang</string>
    <string name="cart">Keranjang</string>
    <string name="sub_total">Sub total</string>
    <string name="tax">Pajak &amp; Biaya</string>
    <string name="delivery">Pengiriman</string>
    <string name="total">Total</string>
    <string name="address_delivery">Alamat Pengiriman</string>
    <string name="hint_address">Ketik alamat...</string>"
    <string name="boocking">Pesan</string>
    <string name="list_order">List Pesanan</string>
    <string name="title_health_test">Tes Kesehatan Otak</string>
    <string name="sub_health_test">Silakan jawab pertanyaan berikut untuk analisis kesehatan otak Anda.</string>
    <string name="answer_the_quesion">Jawab Pertanyaan di Bawah</string>
    <string name="my_profile">Profile Saya</string>
</resources>