<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp"
    android:background="@color/bg"
    tools:context=".ui.auth.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/logo"/>

            <com.example.brainwest_android.utils.ShaderTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:fontFamily="@font/poppins_semibold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_sub_title"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="12sp"/>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/bg_input"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="20dp"
                    >

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/ic_username" />

                    <View
                        android:layout_width="0.7dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="15dp"
                        android:background="@color/white" />

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/hint_username"
                        android:paddingLeft="15dp"
                        android:maxLines="1"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@color/white"
                        android:textSize="13sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="12sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/bg_input"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="20dp"
                    >


                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/ic_password" />

                    <View
                        android:layout_width="0.7dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="15dp"
                        android:background="@color/white" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/hint_password"
                        android:paddingLeft="15dp"
                        android:maxLines="1"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@color/white"
                        android:textSize="13sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="12sp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                android:backgroundTint="@color/primary"
                android:text="@string/login"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="15sp"/>

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:indeterminateTint="@color/primary"
                android:visibility="gone"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginVertical="25dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="@color/white"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginHorizontal="15dp"
                android:textSize="14sp"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_auth_option"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="15dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/google"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="14sp"
                    android:layout_marginLeft="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_auth_option"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:paddingVertical="15dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/facebook"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="14sp"
                    android:layout_marginLeft="12dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_underline"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/poppins_semibold"/>

    </LinearLayout>

</LinearLayout>