<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingVertical="10dp"
    tools:context=".ui.view.onboarding.OnBoardingOneFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/onborading_title_three"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:src="@drawable/onboard3"
            android:layout_marginVertical="70dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/onborading_subtitle_three"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:layout_marginBottom="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/white"
                app:cornerRadius="100dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="13sp"/>


            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="7dp"
                android:src="@drawable/slider3"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/primary"
                app:cornerRadius="100dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="12sp"/>


        </LinearLayout>



    </LinearLayout>

</LinearLayout>