<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/bg"
    android:saveEnabled="true"
    tools:context=".ui.education.EducationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/education"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_input"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="20dp"
            >

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_search" />

            <View
                android:layout_width="0.7dp"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:background="@color/white" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/hint_search_article"
                android:paddingLeft="15dp"
                android:maxLines="1"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@color/white"
                android:textSize="13sp" />

        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_video"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="15sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/most_view"
                        android:textColor="@color/white"
                        android:textSize="11sp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="11sp"
                    android:textColor="@color/primary"/>



            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_education"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:layout_marginTop="15dp"
                android:overScrollMode="never"
                android:clipToPadding="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_article"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="15sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/just_upload"
                        android:textColor="@color/white"
                        android:textSize="11sp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="11sp"
                    android:textColor="@color/primary"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvArticle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_education"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:layout_marginTop="15dp"
                android:overScrollMode="never"
                android:clipToPadding="false"/>

        </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>